tests/string_concat_parenthesized_bad.stderr
tests/string_concat_parenthesized_bad.sl:3:11: error: SL2053: string '+' currently only supports non-parenthesized literal chains
