tests/string_concat_parenthesized_bad.sl
fn main() {
	var a = ("hel" + "lo") + " world"
	_ = a
}
